Added profile data only buttons are left

--- a/index.html
+++ b/index.html
@@ -33,5 +33,11 @@
   LinkedIn
   Twitter
   Instagram-->
+    <div class="box">
+        <img src="./assets/images/avatar-jessica.jpeg" alt="pfp" class="pfp" />
+        <h1 style="margin: 0;">Jessica Randall</h1>
+        <span id="location">London, United Kingdom</span>
+        <span class="role">"Front-end developer and avid reader"</span>
+      </div>
   </body>
 </html>
