--- a/index.html
+++ b/index.html
@@ -34,10 +34,19 @@
   Twitter
   Instagram-->
     <div class="box">
+      <div class="profile-data">
         <img src="./assets/images/avatar-jessica.jpeg" alt="pfp" class="pfp" />
-        <h1 style="margin: 0;">Jessica Randall</h1>
-        <span id="location">London, United Kingdom</span>
-        <span class="role">"Front-end developer and avid reader"</span>
+      <h1 style="margin: 0">Jessica Randall</h1>
+      <span id="location">London, United Kingdom</span>
+      <span class="role">"Front-end developer and avid reader"</span>
       </div>
+      <div class="buttons">
+        <button>Github</button>
+        <button>Frontend Mentor</button>
+        <button>LinkedIn</button>
+        <button>Twitter</button>
+        <button>Instagram</button>
+      </div>
+    </div>
   </body>
 </html>
