Removed Buttons and has used <a> tag Finished the project

--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
       <span class="role">"Front-end developer and avid reader"</span>
       </div>
       <div class="buttons">
-        <button>Github</button>
-        <button>Frontend Mentor</button>
-        <button>LinkedIn</button>
-        <button>Twitter</button>
-        <button>Instagram</button>
+        <a href="">Github</a>
+        <a href="">Frontend Mentor</a>
+        <a href="">LinkedIn</a>
+        <a href="">Twitter</a>
+        <a href="">Instagram</a>
       </div>
     </div>
   </body>
