Added main landmark

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" role="main">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -23,30 +23,26 @@
     </style>
   </head>
   <body>
-    <!--
-  Jessica Randall
-  London, United Kingdom
-  "Front-end developer and avid reader."
-
-  GitHub
-  Frontend Mentor
-  LinkedIn
-  Twitter
-  Instagram-->
-    <div class="box">
-      <div class="profile-data">
-        <img src="./assets/images/avatar-jessica.jpeg" alt="pfp" class="pfp" />
-      <h1 style="margin: 0">Jessica Randall</h1>
-      <span id="location">London, United Kingdom</span>
-      <span class="role">"Front-end developer and avid reader"</span>
+    <main>
+      <div class="box">
+        <div class="profile-data">
+          <img
+            src="./assets/images/avatar-jessica.jpeg"
+            alt="pfp"
+            class="pfp"
+          />
+          <h1 style="margin: 0">Jessica Randall</h1>
+          <span id="location">London, United Kingdom</span>
+          <span class="role">"Front-end developer and avid reader"</span>
+        </div>
+        <div class="buttons">
+          <a href="">Github</a>
+          <a href="">Frontend Mentor</a>
+          <a href="">LinkedIn</a>
+          <a href="">Twitter</a>
+          <a href="">Instagram</a>
+        </div>
       </div>
-      <div class="buttons">
-        <a href="">Github</a>
-        <a href="">Frontend Mentor</a>
-        <a href="">LinkedIn</a>
-        <a href="">Twitter</a>
-        <a href="">Instagram</a>
-      </div>
-    </div>
+    </main>
   </body>
 </html>
